# esp-aws-iot-shadow

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml  library.json
.github/workflows/: build.yml  codeql-analysis.yml
example/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
example/main/: CMakeLists.txt  Kconfig.projbuild  aws_iot_shadow_sample.c  aws_shadow_example_main.c  aws_shadow_sample.c  certs.h  main.c  main.cpp
example/main/certs/: README.md
include/: aws_iot_shadow.h  aws_iot_shadow_handle.h  aws_iot_shadow_mqtt_error.h  aws_iot_shadow_topic.h  aws_shadow.h  aws_shadow_mqtt_error.h  aws_shadow_topic.h  esp_aws_shadow.h  shadow_config.h
src/: aws_iot_shadow.c  aws_iot_shadow_json.c  aws_iot_shadow_mqtt_error.c  aws_root_ca.c  aws_shadow.c  aws_shadow_json.c  aws_shadow_mqtt_error.c  esp_aws_shadow.c  esp_aws_shadow_json.c
src/include/: aws_iot_shadow_json.h  aws_shadow_json.h  esp_aws_shadow_constants.h  esp_aws_shadow_json.h
